
Package: R.cache
================

Version: 0.8.1 [2013-09-15]
o Bumped package dependencies.


Version: 0.8.0 [2013-08-21]
o Now R.utils is no longer attached ("loaded") - only imported.
o Added system tests.


Version: 0.7.4 [2013-08-20]
o Now explicitly importing one function from 'utils' in NAMESPACE.


Version: 0.7.3 [2013-08-18]
o Now clearCache() is exported (rexported from R.oo).


Version: 0.7.2 [2013-08-03]
o Bumped package dependencies.
o BUG FIX: R.cache:::.assertDigest() called from within another package
  would give an error that packageVersion() of 'utils' was not found.


Version: 0.7.1 [2013-07-11]
o Updated the title and the description of the package.


Version: 0.7.0 [2013-07-03]
o Now getChecksum() passes '...' to digest(), e.g. argument 'algo'.
o Bumped package dependencies.


Version: 0.6.10 [2013-05-25]
o Minor speedup of loadCache() - replaced an rm() call with NULL assignment.


Version: 0.6.9 [2013-05-20]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.
o Bumped package dependencies.


Version: 0.6.8 [2012-12-19]
o Utilizing new startupMessage() of R.oo.


Version: 0.6.7 [2012-11-28]
o Added support for clearCache(..., recursive=TRUE).


Version: 0.6.6 [2012-11-27]
o BUG FIX: clearCache() would give error "object 'dirs' not found".


Version: 0.6.5 [2012-11-18]
o ROBUSTNESS: Now package declares S3 methods in the namespace.
o CLEANUP: Now package exports a smaller set of the methods.
o CLEANUP: Package now only imports R.methodsS3 and R.oo, no long
  depends (loads) them.  It still needs to load R.utils.
o Added internal .assertDigest(), which originates from aroma.core.


Version: 0.6.4 [2012-10-16]
o ROBUSTNESS/BUG FIX: No longer passing '...' to NextMethod(), cf.
  R-devel thread 'Do *not* pass '...' to NextMethod() - it'll do it
  for you; missing documentation, a bug or just me?' on Oct 16, 2012.
o Package now imports R.methodsS3 and R.oo.


Version: 0.6.3 [2012-09-12]